<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zeta</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="lb">Lower bound of imaginary part (default 10)</string>
    <string name="ub">Upper bound of imaginary part (default 50)</string>
    <string name="precision">Precision in bits (default 53)</string>
    <string name="precision_is">precision is</string>
    <string name="bits">bits</string>
    <string name="version">version</string>
    <string name="gram_note">Note: zeroes in between Gram points that don\'t obey Gram\'s Law may not be found</string>
    
</resources>
